fix align concerns

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -38,7 +38,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 4rem 0 0 0;
+    padding: 0;
     margin: 0;
     height: auto;
 }
